--- a/backend/MinioConsumers/MinioConsumers.csproj
+++ b/backend/MinioConsumers/MinioConsumers.csproj
@@ -71,8 +71,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="MassTransit" Version="8.1.2" />
       <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
-      <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3-develop.1613" />
+      <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="Minio" Version="6.0.1" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
